--- a/NukaRishitha-AayushaSheregar-FinalProject1 (1).ipynb
+++ b/NukaRishitha-AayushaSheregar-FinalProject1 (1).ipynb
@@ -309,6 +309,12 @@
    "outputs": [],
    "source": [
     "def filtering_countries(combined, country):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param combined: This is a merged dataframe of both the export-import dataset and the GDP dataset\n",
+    "    :param country: It is the specific country for which the rows are being extracted\n",
+    "    :return: The return value is all the extracted rows for the specified country\n",
+    "    \"\"\"\n",
     "    new = combined.loc[combined['Country'] == country]\n",
     "    year = new.loc[:, [\"Export\", \"Import\", \"Country\", \"Year\"]]\n",
     "    year = year.set_index([\"Country\", \"Year\"])\n",
@@ -324,6 +330,12 @@
    "outputs": [],
    "source": [
     "def plotting(combined, country):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param combined: This is a dataframe with all the extracted rows for the specified country\n",
+    "    :param country: It is the specific country for which the rows are being extracted\n",
+    "    :return: It returns a graph that shows the export and import patterns\n",
+    "    \"\"\"\n",
     "     Graph = combined.plot(kind = 'bar', figsize =(30,10), title = country)\n",
     "     return Graph"
    ]
@@ -2439,6 +2451,11 @@
    "outputs": [],
    "source": [
     "def filter_def(filename):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param filename: It is a cleaned dataframe with the net trades of all countries\n",
+    "    :return: It returns the names of countries that have been in a trade deficit for almost all the years considered\n",
+    "    \"\"\"\n",
     "    df = filename[(filename['Year'] > 2009 ) & (filename['Year'] < 2021) & (filename['Net_Trade'] < 0)]\n",
     "    df2 = df.groupby('Year').apply(lambda x: x.sort_values(by = 'Net_Trade', ascending = True).head(5))\n",
     "    df3 = df2.groupby('Country Name').count() > 9 \n",
@@ -2474,8 +2491,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#After finding USA and INDIA as the trade deficeit countries I defined a function to plot the Net trade of both these countries \n",
+    "#After finding USA and INDIA as the trade deficit countries I defined a function to plot the Net trade of both these countries\n",
     "def plot_country(filename, country1, country2):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param filename: It is a cleaned dataframe with the net trades of all countries\n",
+    "    :param country1: It is the name of the country we found in a trade deficit\n",
+    "    :param country2: It is the name of the country we found in a trade deficit\n",
+    "    :return: It returns graphs that show the net trade patterns of each country\n",
+    "    \"\"\"\n",
     "        df = filename[(filename['Year'] > 2009 ) & (filename['Year'] < 2021) & (filename['Net_Trade'] < 0)]\n",
     "        df2 = df.loc[df['Country Name'].isin([country1, country2])]\n",
     "        sns.set()\n",
