--- a/NukaRishitha-AayushaSheregar-FinalProject1 (1).ipynb
+++ b/NukaRishitha-AayushaSheregar-FinalProject1 (1).ipynb
@@ -3307,7 +3307,7 @@
     }
    ],
    "source": [
-    "heatmap1 = combined_heatmap.corr(\n",
+    "heatmap1 = combined_heatmap.corr()\n",
     "plt.subplots(figsize=(15,10))\n",
     "sns.heatmap(heatmap1, xticklabels=heatmap1.columns, yticklabels=heatmap1.columns, annot=True, cmap=sns.diverging_palette(220, 20, as_cmap=True))"
    ],
